--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-
-    <title>Pixely Redux</title>
+    
+    <title>PixelP Redux</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
